--- a/client/src/pages/Poll/Poll.css
+++ b/client/src/pages/Poll/Poll.css
@@ -1,3 +1,12 @@
+.card-body {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-body .card-body-left {
+  flex: 0.7;
+}
+
 .option {
   display: flex;
   justify-content: space-between;
