Small css clean up

--- a/client/src/pages/Polls/Polls.css
+++ b/client/src/pages/Polls/Polls.css
@@ -3,3 +3,13 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.card-options {
+  flex: 0.5;
+}
+
+.card-text {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
