--- a/client/src/pages/Polls/Polls.css
+++ b/client/src/pages/Polls/Polls.css
@@ -5,14 +5,21 @@
 }
 
 .card-options {
-  flex: 0.5;
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: right;
 }
 
 .card-text {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.card-chart {
+  max-width: 50%;
+  display: flex;
+  align-items: center;
 }
