Added add comment form and fixed back buttons

--- a/client/src/pages/Poll/Poll.css
+++ b/client/src/pages/Poll/Poll.css
@@ -11,3 +11,12 @@
   display: flex;
   justify-content: space-between;
 }
+
+textarea {
+  resize: none;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+}
