Added comment form, username to context, like/dislikes, add comment route, like route

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -9,3 +9,12 @@ nav .fa-times {
   right: 15px;
   top: 10px;
 }
+
+nav .username {
+  color: #fff;
+  width: 40%;
+}
+
+nav .username span {
+  color: var(--info);
+}
