--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,3 +1,9 @@
+nav .brand-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 nav .input-container {
   position: relative;
 }
@@ -7,7 +13,7 @@ nav .fa-times {
   color: var(--danger);
   position: absolute;
   right: 15px;
-  top: 10px;
+  top: 20.5px;
 }
 
 nav .username {
