--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,11 @@ html {
 #root {
   background: #2d2d2d;
   min-height: 100vh;
+  position: relative;
+}
+
+.container {
+  padding-bottom: 70px;
 }
 
 .form-control::placeholder {
