--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,12 @@ html {
   overflow-y: scroll;
 }
 
+:root {
+  --dark: #2d2d2d;
+}
+
 #root {
-  background: #2d2d2d;
+  background: var(--dark);
   min-height: 100vh;
   position: relative;
 }
