Started working on polls with geolocation

--- a/client/src/pages/Poll/Poll.css
+++ b/client/src/pages/Poll/Poll.css
@@ -7,6 +7,10 @@
   flex: 0.7;
 }
 
+.card-body .spinner {
+  height: unset;
+}
+
 .card-body .card-body-right {
   max-width: 60%;
   display: flex;
