--- a/client/src/pages/Polls/Polls.css
+++ b/client/src/pages/Polls/Polls.css
@@ -65,8 +65,28 @@
 }
 
 @media only screen and (max-width: 414px) {
-  .card-header {
+  .Polls .card-header {
     padding: 0.5rem 1rem;
+    display: grid;
+    grid-template-areas:
+      'question tags'
+      'question vote';
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 2fr;
+  }
+
+  .card-header .card-question {
+    grid-area: question;
+  }
+
+  .card-header .card-tags {
+    grid-area: tags;
+    place-self: center;
+  }
+
+  .card-header .card-vote {
+    grid-area: vote;
+    place-self: center;
   }
 
   .card-body {
